@@ -147,7 +147,9 @@ Text_spanner::print (SCM smob)
     }
   while (flip (&d) != LEFT);
 
-  if (!span_points.is_empty ())
+  
+  if (!span_points.is_empty ()
+      && span_points.length () > robust_scm2double (me->get_property ("dash-period"), 0.0))
     {
       Stencil l = Line_spanner::line_stencil (me,
 					      Offset (span_points[LEFT], 0),
@@ -158,7 +160,20 @@ Text_spanner::print (SCM smob)
   return m.smobbed_copy ();
 }
 
-ADD_INTERFACE (Text_spanner, "text-spanner-interface",
+ADD_INTERFACE (Text_spanner,
+	       "text-spanner-interface",
+
 	       "generic text spanner",
-	       "bound-padding dash-period dash-fraction edge-height bracket-flare edge-text shorten-pair style thickness enclose-bounds");
+
+	       "bound-padding "
+	       "bracket-flare "
+	       "dash-fraction "
+	       "dash-period "
+	       "edge-height "
+	       "edge-text "
+	       "enclose-bounds"
+	       "shorten-pair "
+	       "style "
+	       "thickness "
+	       );
 
