@@ -1,5 +1,12 @@
 2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/relocate.cc (setup_paths): GCC 4.2 fixes: const correctness.
+
+	* lily/text-spanner.cc (print): idem.
+
+	* lily/dynamic-text-spanner.cc (print): only print line if longer
+	than dash-period.
+
 	* lily/auto-change-iterator.cc (change_to): formatting.
 
 	* lily/beam.cc (get_default_dir): take extreme note head as input
